--- a/README
+++ b/README
@@ -1,2 +1,9 @@
 ##demo 
 this is Read Me file.
+add
+commit 
+push 
+pull 
+clone 
+
+Dry - don't repeat code i mean logic that's why we use the functions 
