--- a/README
+++ b/README
@@ -2,8 +2,7 @@
 this is Read Me file.
 add
 commit 
-push 
-pull 
+push, pull 
 clone 
 
 Dry - don't repeat code i mean logic that's why we use the functions 
