--- a/README
+++ b/README
@@ -1,8 +1,12 @@
-##demo 
+##demo
 this is Read Me file.
 add
-commit 
-push, pull 
-clone 
+commit
+push, pull
+clone
 
-Dry - don't repeat code i mean logic that's why we use the functions 
+Dry - don't repeat code i mean logic that's why we use the functions
+
+## subheader
+
+This is a sub header for this section of the readme file.
